<resources>
    <string name="app_name">My Day</string>
    <string name="app_version">Ver 1.0</string>
    <string name="app_company">FPT Polytechnic</string>

    <!--Intro Slider-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Calendar</string>
    <string name="slide_1_desc">The easiest way to manage your day !</string>
    <string name="slide_2_title">Weather</string>
    <string name="slide_2_desc">Let see how your day will be !</string>
    <string name="slide_3_title">Note</string>
    <string name="slide_3_desc">Keep something important, you found it !</string>
    <string name="slide_4_title">Diary</string>
    <string name="slide_4_desc">Where you can put your secret !</string>

    <!--MainActivity-->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lương Thị Lam</string>
    <string name="nav_header_subtitle">lamltph06792@fpt.edu.vn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_calendar">Calendar</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_note">Note</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>

    <!--SettingFragment-->
    <string name="setting_allow_location_service">Allow app to access your location</string>

    <!--Common-->
    <string name="image_description" />

    <!--NoteFragment-->
    <string name="create_new_note">Create new note...</string>
    <string name="title_placeholder">Title</string>
    <string name="note_placeholder">Note</string>
    <string name="last_modification_date">Last modification date</string>
    <string name="note_actions">Note actions</string>
    <string name="note_types">note_types</string>
    <string name="checkbox_notes_button">Checkbox notes button</string>
    <string name="draw_notes_button">Draw notes button</string>
    <string name="micro_notes_button">Micro notes button</string>
    <string name="photo_notes_button">Photo notes button</string>
    <string name="note_picture">Note picture</string>



<!--    daily view-->
    <string name="time_12am">12 am</string>
    <string name="time_1am">1 am</string>
    <string name="time_2am">2 am</string>
    <string name="time_3am">3 am</string>
    <string name="time_4am">4 am</string>
    <string name="time_5am">5 am</string>
    <string name="time_6am">6 am</string>
    <string name="time_7am">7 am</string>
    <string name="time_8am">8 am</string>
    <string name="time_9am">9 am</string>
    <string name="time_10am">10 am</string>
    <string name="time_11am">11 am</string>
    <string name="time_12pm">12 pm</string>
    <string name="time_13pm">13 pm</string>
    <string name="time_14pm">14 pm</string>
    <string name="time_15pm">15 pm</string>
    <string name="time_16pm">16 pm</string>
    <string name="time_17pm">17 pm</string>
    <string name="time_18pm">18 pm</string>
    <string name="time_19pm">19 pm</string>
    <string name="time_20pm">20 pm</string>
    <string name="time_21pm">21 pm</string>
    <string name="time_22pm">22 pm</string>
    <string name="time_23pm">23 pm</string>
    <string name="time_24pm">24 pm</string>
    <string name="birth_day">I am going to birthday party</string>
    <string name="current_day_date">8 October, 2016</string>



</resources>
